src/test/ui/consts/const-external-macro-const-err.stderr
error: any use of this value will cause an error
  --> $DIR/const-external-macro-const-err.rs:12:5
   |
LL |     static_assert!(2 + 2 == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the len is 1 but the index is 1
   |
   = note: `#[deny(const_err)]` on by default
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

